added prefix to auth routes, deleted comments
